Some fix and advancedResearchThesis ended
