# server/openApi.json
@@ -52,7 +52,18 @@
                         "in": "query",
                         "name": "page",
                         "schema":{
-                            "type": "integer"
+                            "type": "integer",
+                            "minimum": 1
+                        },
+                        "required": true
+                    },
+                    {
+                        "in": "query",
+                        "name": "order",
+                        "description": "Order of results. D: discendent, A: ascendent",
+                        "schema":{
+                            "default": "titleD",
+                            "enum": ["titleD", "titleA", "supervisorD", "supervisorA", "co-supervisorD","co-supervisorA","keywordD", "keywordA", "typeD", "typeA","groupsD","groupsA","knowledgeD","knowledgeA", "expiration_dateD","expiration_dateA", "cdsD", "cdsA", "creation_dateD", "creation_dateA"]
                         },
                         "required": true
                     },
